Change AuthorList constructors